fix(foundry): tests

--- a/foundry.toml
+++ b/foundry.toml
@@ -5,7 +5,7 @@ script = "ops"
 out = "artifacts"
 libs = ["lib"]
 remappings = []
-auto_detect_remappings = false
+auto_detect_remappings = true
 libraries = []
 cache = true
 cache_path = ".foundry/cache"
